<resources>
    <string name="all_images">All pictures</string>
    <string name="all_videos">All videos</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_picker_label">Gallery</string>
    <string name="gallery_label">Gallery</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="gallery_camera_media_bucket_name">Camera media</string>
    <string name="crop_label">Crop picture</string>
    <string name="view_label">View picture</string>
    <string name="preferences_label">Camera settings</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing...</string>
    <string name="wallpaper">Setting wallpaper, please wait…</string>
    <string name="savingImage">Saving picture…</string>
    <string name="runningFaceDetection">Please wait…</string>
    <string name="view">View</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on Maps</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="slide_show">Slideshow</string>
    <string name="multiselect">Multiselect</string>
    <string name="capture_picture">Capture picture</string>
    <string name="capture_video">Capture video</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_message">The picture will be deleted.</string>
    <string name="confirm_delete_video_message">The video will be deleted.</string>
    <string name="confirm_delete_multiple_message">These media files will be deleted.</string>
    <string name="camera_toss">Delete</string>
    <string name="camera_share">Share</string>
    <string name="camera_set">Set as</string>
    <string name="camera_play">Play</string>
    <string name="camera_attach">Attach</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_crop">Crop</string>
    <string name="no_way_to_share_image">No application available to share the picture.</string>
    <string name="no_way_to_share_video">No application available to share the video.</string>
    <string name="no_way_to_share">No application available to share the media file(s).</string>
    <string name="video_play">Play</string>
    <string name="camera_pick_wallpaper">Pictures</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="pref_gallery_category">General settings</string>
    <string name="pref_slideshow_category">Slideshow settings</string>
    <string name="pref_gallery_size_title">Display size</string>
    <string name="pref_gallery_size_summary">Select the display size of pictures and videos</string>
    <string name="pref_gallery_size_dialogtitle">Picture size</string>
    <string name="default_value_pref_gallery_size">1</string>
    <string name="pref_gallery_sort_title">Sort order</string>
    <string name="pref_gallery_sort_summary">Select the sort order of pictures and videos</string>
    <string name="pref_gallery_sort_dialogtitle">Picture sort</string>
    <string name="default_value_pref_gallery_sort">descending</string>
    <string name="pref_gallery_slideshow_interval_title">Slideshow interval</string>
    <string name="pref_gallery_slideshow_interval_summary">Select how long each slide displays in the show</string>
    <string name="pref_gallery_slideshow_interval_dialogtitle">Slideshow interval</string>
    <string name="default_value_pref_gallery_slideshow_interval">2</string>
    <string name="pref_gallery_slideshow_transition_title">Slideshow transition</string>
    <string name="pref_gallery_slideshow_transition_summary">Select the effect used when moving from one slide to the next</string>
    <string name="pref_gallery_slideshow_transition_dialogtitle">Slideshow transition</string>
    <string name="default_value_pref_gallery_slideshow_transition">0</string>
    <string name="pref_gallery_slideshow_repeat_title">Repeat slideshow</string>
    <string name="pref_gallery_slideshow_repeat_summary">Play slideshow more than once</string>
    <string name="pref_gallery_slideshow_shuffle_title">Shuffle slides</string>
    <string name="pref_gallery_slideshow_shuffle_summary">Show pictures in random order</string>
    <string name="camerasettings">Settings</string>
    <string name="image_gallery_NoImageView_text">No media found.</string>
    <string name="pref_gallery_confirm_delete_title">Confirm deletions</string>
    <string name="pref_gallery_confirm_delete_summary">Show confirmation before deleting a picture or video</string>
    <string name="no_location_image">No Location information contained in this image.</string>
    <string name="details_panel_title">Details</string>
    <string name="details_file_size">File size:</string>
    <string name="details_image_resolution">Resolution:</string>
    <string name="details_image_make">Manufacturer:</string>
    <string name="details_image_model">Model:</string>
    <string name="details_image_whitebalance">WhiteBalance:</string>
    <string name="details_image_latitude">GPS Latitude:</string>
    <string name="details_image_longitude">GPS Longitude:</string>
    <string name="details_image_location">Location:</string>
    <string name="details_duration">Duration:</string>
    <string name="details_date_taken">Date taken:</string>
    <string name="details_frame_rate">Frame rate:</string>
    <string name="details_bit_rate">Bit rate:</string>
    <string name="details_codec">Codec:</string>
    <string name="details_format">Format:</string>
    <string name="details_dimension_x">%1$d x %2$d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_fps">%1$d fps</string>
    <string name="details_kbps">%1$d Kbps</string>
    <string name="details_mbps">%1$g Mbps</string>
    <string name="details_ok">OK</string>
    <string name="context_menu_header">Picture options</string>
    <string name="video_context_menu_header">Video options</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="photos_gallery_title">Gallery</string>
    <string name="pick_photos_gallery_title">Select picture</string>
    <string name="videos_gallery_title">Gallery</string>
    <string name="pick_videos_gallery_title">Select video</string>
    <string name="sendImage">Share picture via</string>
    <string name="setImage">Set picture as</string>
    <string name="sendVideo">Share video via</string>
    <string name="send_media_files">Share media files via</string>
    <string name="movieviewlabel">Movies</string>
    <string name="loading_video">Loading video…</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="gadget_title">Picture frame</string>
    <string name="file_info_title">File info:</string>
    <string name="video_exceed_mms_limit">The video you recorded is too large to send via MMS. Try recording a shorter length clip.</string>
    <string name="multiselect_share">Share</string>
    <string name="multiselect_delete">Delete</string>
    <string name="multiselect_cancel">Cancel</string>
    <string name="delete_images_message">Deleting images, please wait…</string>
    <string name="accept">Accept</string>
    <string name="app_name">Instagram</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="enter_caption">Type your caption here</string>
    <string name="upload">Upload</string>
    <string name="twitter">Twitter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="followInstagram">Follow @instagram?</string>
    <string name="followInstagramBlog">Follow blog.instagram.com</string>
    <string name="done">Done</string>
    <string name="done_exclamation">Done!</string>
    <string name="connectTwitter">Connect your Twitter account</string>
    <string name="enable_geotag">Enable Geotag</string>
    <string name="geotagged">Geotagged</string>
    <string name="nearby">Nearby</string>
    <string name="locating">Locating...</string>
    <string name="location">Location</string>
    <string name="more_photos_at_location">More photos at %s</string>
    <string name="foursquare">Foursquare</string>
    <string name="tumblr">Tumblr</string>
    <string name="sharing">Sharing</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="send_beta_feedback">Send Beta Feedback</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="signUp">Sign up</string>
    <string name="popular">Popular</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="Feed">Feed</string>
    <string name="Popular">Popular</string>
    <string name="News">News</string>
    <string name="Profile">Profile</string>
    <string name="liked_exclaim">Liked!</string>
    <string name="like">like</string>
    <string name="liked">liked</string>
    <string name="options">options</string>
    <string name="comment">comment</string>
    <string name="could_not_refresh_feed">Couldn’t refresh feed</string>
    <string name="photos">photos</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="following_button_following">Following</string>
    <string name="following_button_requested">Requested</string>
    <string name="following_button_follow">Follow</string>
    <string name="loading">Loading...</string>
    <string name="you_are_following_this_user">You are following this user</string>
    <string name="this_user_is_private">This user is private</string>
    <string name="you_are_not_following_this_user">You are not following this user</string>
    <string name="user_not_found">User not found</string>
    <string name="create_a_custom_location">Create a custom location</string>
    <string name="search_places_nearby">Search more places nearby</string>
    <string name="delete_media">Delete</string>
    <string name="tap_to_focus">Tap to focus</string>
    <string name="image_file_name_format">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="dialog_ok">OK</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_flash_mode_off">off</string>
    <string name="pref_camera_flash_mode_on">on</string>
    <string name="pref_camera_flash_mode_auto">auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="x_wants_to_follow_you">%s wants to follow you</string>
    <string name="approve">Approve</string>
    <string name="ignore">Ignore</string>
    <string name="set_a_profile_picture">Set a profile picture</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="a_beautiful_way_to_share_your_world">A beautiful way to share your world</string>
    <string name="its_fast_free_and_fun">It’s fast, free and fun!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
</resources>