<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/row_profile_header_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"> >
<TextView android:textSize="16.0dip" android:textColor="@color/white" android:id="@id/row_friend_request_header_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/x_wants_to_follow_you" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/row_friend_request_header_button_approve" android:background="@drawable/button_small_green_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:text="@string/approve" style="@style/IgGreenButtonStyle" />
        <Button android:id="@id/row_friend_request_header_button_ignore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/ignore" style="@style/IgGrayButtonStyle" />
    </LinearLayout>
</LinearLayout>
