<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_listview" />
    <FrameLayout android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/landing_dialog" android:background="@drawable/dialog_background" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/firstlaunch_branding" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="@color/dark_gray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/a_beautiful_way_to_share_your_world" android:shadowColor="@color/white" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="1.0" />
        <TextView android:textSize="16.0dip" android:textColor="@color/dark_silver" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/its_fast_free_and_fun" android:shadowColor="@color/white" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="1.0" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="@dimen/text_size_large_button" android:textStyle="bold" android:textColor="@color/white" android:id="@id/toolbar_button_sign_up" android:background="@drawable/button_large_blue_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:minWidth="125.0dip" android:text="@string/sign_up" android:shadowColor="@color/action_bar_title_textview_shadow_dark" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="1.0" />
            <Button android:textSize="@dimen/text_size_large_button" android:textStyle="bold" android:textColor="@color/white" android:id="@id/toolbar_button_login" android:background="@drawable/button_large_blue_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:minWidth="125.0dip" android:text="@string/log_in" android:shadowColor="@color/action_bar_title_textview_shadow_dark" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
