<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/row_friend_request_header" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/row_friend_request_header" />
    <FrameLayout android:background="@drawable/row_profile_header_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="77.0dip" android:layout_height="89.0dip">
                <com.instagram.android.imagecache.IgImageView android:layout_gravity="center" android:id="@id/row_profile_header_imageview" android:layout_width="@dimen/large_profile_pic" android:layout_height="@dimen/large_profile_pic" android:src="@color/gray" />
                <ImageView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/profile_header_avatar_overlay" />
            </FrameLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <FrameLayout android:id="@id/row_profile_header_container_photos" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/row_profile_header_imageview" android:layout_alignBottom="@id/row_profile_header_imageview">
                    <include layout="@layout/layout_profile_badge_bg" />
                    <TextView android:textSize="23.0dip" android:textColor="@color/white" android:ellipsize="marquee" android:layout_gravity="top|center" android:id="@id/row_profile_header_textview_photos_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="24" android:singleLine="true" android:shadowColor="@color/text_shadow_for_count_on_badge" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="3.0" />
                    <TextView android:textSize="12.0dip" android:textColor="@color/white" android:layout_gravity="bottom|center" android:id="@id/row_profile_header_textview_photos_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/photos" android:shadowColor="@color/text_shadow_for_count_label_on_badge" android:shadowDx="0.0" android:shadowDy="-2.0" android:shadowRadius="1.0" />
                </FrameLayout>
                <FrameLayout android:id="@id/row_profile_header_container_followers" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/row_profile_header_container_photos" android:layout_alignBottom="@id/row_profile_header_imageview">
                    <include layout="@layout/layout_profile_badge_bg" />
                    <TextView android:textSize="23.0dip" android:textColor="@color/white" android:ellipsize="marquee" android:layout_gravity="top|center" android:id="@id/row_profile_header_textview_followers_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="24" android:singleLine="true" android:shadowColor="@color/text_shadow_for_count_on_badge" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="3.0" />
                    <TextView android:textSize="12.0dip" android:textColor="@color/white" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/followers" android:shadowColor="@color/text_shadow_for_count_label_on_badge" android:shadowDx="0.0" android:shadowDy="-2.0" android:shadowRadius="1.0" />
                </FrameLayout>
                <FrameLayout android:id="@id/row_profile_header_container_following" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/row_profile_header_container_followers" android:layout_alignBottom="@id/row_profile_header_imageview">
                    <include layout="@layout/layout_profile_badge_bg" />
                    <TextView android:textSize="23.0dip" android:textColor="@color/white" android:ellipsize="marquee" android:layout_gravity="top|center" android:id="@id/row_profile_header_textview_following_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="130" android:singleLine="true" android:shadowColor="@color/text_shadow_for_count_on_badge" android:shadowDx="0.0" android:shadowDy="2.0" android:shadowRadius="3.0" />
                    <TextView android:textSize="12.0dip" android:textColor="@color/white" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/following" android:shadowColor="@color/text_shadow_for_count_label_on_badge" android:shadowDx="0.0" android:shadowDy="-2.0" android:shadowRadius="1.0" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/row_profile_header_viewgroup_following" android:background="@drawable/profile_follow_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_gravity="left|center" android:id="@id/row_profile_header_textview_following_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:color="@color/dark_silver" />
            <com.instagram.android.widget.FollowButton android:layout_gravity="right|center" android:id="@id/row_profile_header_button_follow" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/IgFollowButtonStyle" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/row_profile_header_viewgroup_user_info" android:background="@color/white" android:paddingTop="5.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/dark_gray" android:layout_gravity="left|center" android:id="@id/row_profile_header_textview_biography" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="User description" />
            <TextView android:textStyle="bold" android:textColor="@color/link_color" android:layout_gravity="left|center" android:id="@id/row_profile_header_textview_website" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="http://www.website.com/" />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/layout_button_group_view_switcher" />
</LinearLayout>
